# serializer version: 1
# name: TestBlastRadius.test_user_blast_radius
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(1)
  FROM
    (SELECT id
     FROM person
     WHERE team_id = 2
       AND id IN
         (SELECT id
          FROM person
          WHERE team_id = 2
            AND (has(['0', '1', '2', '3'], replaceRegexpAll(JSONExtractRaw(properties, 'group'), '^"|"$', ''))) )
     GROUP BY id
     HAVING max(is_deleted) = 0
     AND (has(['0', '1', '2', '3'], replaceRegexpAll(JSONExtractRaw(argMax(person.properties, version), 'group'), '^"|"$', ''))) SETTINGS optimize_aggregation_in_order = 1)
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(1)
  FROM
    (SELECT id
     FROM person
     WHERE team_id = 2
     GROUP BY id
     HAVING max(is_deleted) = 0 SETTINGS optimize_aggregation_in_order = 1)
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_groups
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(1)
  FROM
    (SELECT group_key,
            argMax(group_properties, _timestamp) AS group_properties_0
     FROM groups
     WHERE team_id = 2
       AND group_type_index = 0
     GROUP BY group_key
     HAVING 1=1
     AND (has(['0', '1', '2', '3'], replaceRegexpAll(JSONExtractRaw(group_properties_0, 'industry'), '^"|"$', ''))))
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_groups.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(DISTINCT group_key)
  FROM groups
  WHERE team_id = 2
    AND group_type_index = 0
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_groups_multiple_queries
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(1)
  FROM
    (SELECT group_key,
            argMax(group_properties, _timestamp) AS group_properties_0
     FROM groups
     WHERE team_id = 2
       AND group_type_index = 0
     GROUP BY group_key
     HAVING 1=1
     AND ((has(['0', '1', '2', '3', '4'], replaceRegexpAll(JSONExtractRaw(group_properties_0, 'industry'), '^"|"$', '')))
          AND (has(['2', '3', '4', '5', '6'], replaceRegexpAll(JSONExtractRaw(group_properties_0, 'industry'), '^"|"$', '')))))
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_groups_multiple_queries.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(DISTINCT group_key)
  FROM groups
  WHERE team_id = 2
    AND group_type_index = 0
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_multiple_precalculated_cohorts
  '''
  
  SELECT count(DISTINCT person_id)
  FROM cohortpeople
  WHERE team_id = 2
    AND cohort_id = 2
    AND version = NULL
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_multiple_precalculated_cohorts.1
  '''
  /* cohort_calculation: */
  SELECT count(DISTINCT person_id)
  FROM cohortpeople
  WHERE team_id = 2
    AND cohort_id = 2
    AND version = 0
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_multiple_precalculated_cohorts.2
  '''
  
  SELECT count(DISTINCT person_id)
  FROM cohortpeople
  WHERE team_id = 2
    AND cohort_id = 2
    AND version = NULL
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_multiple_precalculated_cohorts.3
  '''
  /* cohort_calculation: */
  SELECT count(DISTINCT person_id)
  FROM cohortpeople
  WHERE team_id = 2
    AND cohort_id = 2
    AND version = 0
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_multiple_precalculated_cohorts.4
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(1)
  FROM
    (SELECT id
     FROM person
     WHERE team_id = 2
       AND id in
         (SELECT DISTINCT person_id
          FROM cohortpeople
          WHERE team_id = 2
            AND cohort_id = 2
            AND version = 0 )
       AND id in
         (SELECT DISTINCT person_id
          FROM cohortpeople
          WHERE team_id = 2
            AND cohort_id = 2
            AND version = 0 )
     GROUP BY id
     HAVING max(is_deleted) = 0 SETTINGS optimize_aggregation_in_order = 1)
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_multiple_precalculated_cohorts.5
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(1)
  FROM
    (SELECT id
     FROM person
     WHERE team_id = 2
     GROUP BY id
     HAVING max(is_deleted) = 0 SETTINGS optimize_aggregation_in_order = 1)
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_multiple_static_cohorts
  '''
  
  SELECT count(DISTINCT person_id)
  FROM person_static_cohort
  WHERE team_id = 2
    AND cohort_id = 2
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_multiple_static_cohorts.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(1)
  FROM
    (SELECT id
     FROM person
     WHERE team_id = 2
       AND id IN
         (SELECT id
          FROM person
          INNER JOIN
            (SELECT person_id
             FROM person_static_cohort
             WHERE team_id = 2
               AND cohort_id = 2
             GROUP BY person_id,
                      cohort_id,
                      team_id) cohort_persons ON cohort_persons.person_id = person.id
          WHERE team_id = 2
            AND ((has(['1', '2', '4', '5', '6'], replaceRegexpAll(JSONExtractRaw(properties, 'group'), '^"|"$', '')))) )
     GROUP BY id
     HAVING max(is_deleted) = 0
     AND ((has(['1', '2', '4', '5', '6'], replaceRegexpAll(JSONExtractRaw(argMax(person.properties, version), 'group'), '^"|"$', '')))) SETTINGS optimize_aggregation_in_order = 1)
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_multiple_static_cohorts.2
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(1)
  FROM
    (SELECT id
     FROM person
     WHERE team_id = 2
     GROUP BY id
     HAVING max(is_deleted) = 0 SETTINGS optimize_aggregation_in_order = 1)
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_multiple_static_cohorts.3
  '''
  
  SELECT count(DISTINCT person_id)
  FROM cohortpeople
  WHERE team_id = 2
    AND cohort_id = 2
    AND version = NULL
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_multiple_static_cohorts.4
  '''
  /* cohort_calculation: */
  SELECT count(DISTINCT person_id)
  FROM cohortpeople
  WHERE team_id = 2
    AND cohort_id = 2
    AND version = 0
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_multiple_static_cohorts.5
  '''
  
  SELECT count(DISTINCT person_id)
  FROM cohortpeople
  WHERE team_id = 2
    AND cohort_id = 2
    AND version = NULL
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_multiple_static_cohorts.6
  '''
  /* cohort_calculation: */
  SELECT count(DISTINCT person_id)
  FROM cohortpeople
  WHERE team_id = 2
    AND cohort_id = 2
    AND version = 0
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_multiple_static_cohorts.7
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(1)
  FROM
    (SELECT id
     FROM person
     WHERE team_id = 2
       AND id in
         (SELECT person_id as id
          FROM person_static_cohort
          WHERE cohort_id = 2
            AND team_id = 2)
       AND id in
         (SELECT DISTINCT person_id
          FROM cohortpeople
          WHERE team_id = 2
            AND cohort_id = 2
            AND version = 0 )
     GROUP BY id
     HAVING max(is_deleted) = 0 SETTINGS optimize_aggregation_in_order = 1)
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_single_cohort
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(1)
  FROM
    (SELECT id
     FROM person
     WHERE team_id = 2
       AND id IN
         (SELECT id
          FROM person
          WHERE team_id = 2
            AND (((has(['none'], replaceRegexpAll(JSONExtractRaw(properties, 'group'), '^"|"$', '')))
                  OR (has(['1', '2', '3'], replaceRegexpAll(JSONExtractRaw(properties, 'group'), '^"|"$', ''))))) )
     GROUP BY id
     HAVING max(is_deleted) = 0
     AND (((has(['none'], replaceRegexpAll(JSONExtractRaw(argMax(person.properties, version), 'group'), '^"|"$', '')))
           OR (has(['1', '2', '3'], replaceRegexpAll(JSONExtractRaw(argMax(person.properties, version), 'group'), '^"|"$', ''))))) SETTINGS optimize_aggregation_in_order = 1)
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_single_cohort.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(1)
  FROM
    (SELECT id
     FROM person
     WHERE team_id = 2
     GROUP BY id
     HAVING max(is_deleted) = 0 SETTINGS optimize_aggregation_in_order = 1)
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_single_cohort.2
  '''
  
  SELECT count(DISTINCT person_id)
  FROM cohortpeople
  WHERE team_id = 2
    AND cohort_id = 2
    AND version = NULL
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_single_cohort.3
  '''
  /* cohort_calculation: */
  SELECT count(DISTINCT person_id)
  FROM cohortpeople
  WHERE team_id = 2
    AND cohort_id = 2
    AND version = 0
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_single_cohort.4
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(1)
  FROM
    (SELECT id
     FROM person
     INNER JOIN
       (SELECT DISTINCT person_id
        FROM cohortpeople
        WHERE team_id = 2
          AND cohort_id = 2
          AND version = 0
        ORDER BY person_id) cohort_persons ON cohort_persons.person_id = person.id
     WHERE team_id = 2
     GROUP BY id
     HAVING max(is_deleted) = 0 SETTINGS optimize_aggregation_in_order = 1)
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_iterator
  '''
  SELECT "posthog_featureflag"."id",
         "posthog_featureflag"."key",
         "posthog_featureflag"."name",
         "posthog_featureflag"."filters",
         "posthog_featureflag"."rollout_percentage",
         "posthog_featureflag"."team_id",
         "posthog_featureflag"."created_by_id",
         "posthog_featureflag"."created_at",
         "posthog_featureflag"."deleted",
         "posthog_featureflag"."active",
         "posthog_featureflag"."rollback_conditions",
         "posthog_featureflag"."performed_rollback",
         "posthog_featureflag"."ensure_experience_continuity",
         "posthog_featureflag"."usage_dashboard_id",
         "posthog_featureflag"."has_enriched_analytics"
  FROM "posthog_featureflag"
  WHERE ("posthog_featureflag"."key" = 'some-feature2'
         AND "posthog_featureflag"."team_id" = 2)
  LIMIT 21
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_iterator.1
  '''
  SELECT "posthog_cohort"."id",
         "posthog_cohort"."name",
         "posthog_cohort"."description",
         "posthog_cohort"."team_id",
         "posthog_cohort"."deleted",
         "posthog_cohort"."filters",
         "posthog_cohort"."query",
         "posthog_cohort"."version",
         "posthog_cohort"."pending_version",
         "posthog_cohort"."count",
         "posthog_cohort"."created_by_id",
         "posthog_cohort"."created_at",
         "posthog_cohort"."is_calculating",
         "posthog_cohort"."last_calculation",
         "posthog_cohort"."errors_calculating",
         "posthog_cohort"."is_static",
         "posthog_cohort"."groups"
  FROM "posthog_cohort"
  WHERE ("posthog_cohort"."id" = 2
         AND "posthog_cohort"."team_id" = 2)
  LIMIT 21
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_iterator.2
  '''
  SELECT "posthog_person"."id",
         "posthog_person"."created_at",
         "posthog_person"."properties_last_updated_at",
         "posthog_person"."properties_last_operation",
         "posthog_person"."team_id",
         "posthog_person"."properties",
         "posthog_person"."is_user_id",
         "posthog_person"."is_identified",
         "posthog_person"."uuid",
         "posthog_person"."version"
  FROM "posthog_person"
  WHERE ("posthog_person"."team_id" = 2
         AND ("posthog_person"."properties" -> 'key') = '"value"'::jsonb
         AND "posthog_person"."properties" ? 'key'
         AND NOT (("posthog_person"."properties" -> 'key') = 'null'::jsonb))
  ORDER BY "posthog_person"."id" ASC
  LIMIT 2
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_iterator.3
  '''
  SELECT "posthog_persondistinctid"."id",
         "posthog_persondistinctid"."team_id",
         "posthog_persondistinctid"."person_id",
         "posthog_persondistinctid"."distinct_id",
         "posthog_persondistinctid"."version"
  FROM "posthog_persondistinctid"
  WHERE ("posthog_persondistinctid"."id" IN
           (SELECT U0."id"
            FROM "posthog_persondistinctid" U0
            WHERE U0."person_id" = ("posthog_persondistinctid"."person_id")
            LIMIT 3)
         AND "posthog_persondistinctid"."person_id" IN (1,
                                                        2,
                                                        3,
                                                        4,
                                                        5 /* ... */))
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_iterator.4
  '''
  SELECT "posthog_person"."uuid"
  FROM "posthog_person"
  WHERE ("posthog_person"."team_id" = 2
         AND "posthog_person"."uuid" IN ('00000000000040008000000000000000'::uuid,
                                         '00000000000040008000000000000001'::uuid)
         AND NOT (EXISTS
                    (SELECT 1 AS "a"
                     FROM "posthog_cohortpeople" U1
                     WHERE (U1."cohort_id" = 2
                            AND U1."person_id" = ("posthog_person"."id"))
                     LIMIT 1)))
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_iterator.5
  '''
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."project_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."ingested_event",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_web_vitals_opt_in",
         "posthog_team"."autocapture_web_vitals_allowed_metrics",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."session_replay_config",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."heatmaps_opt_in",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."extra_settings",
         "posthog_team"."modifiers",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_iterator.6
  '''
  SELECT "posthog_person"."id",
         "posthog_person"."created_at",
         "posthog_person"."properties_last_updated_at",
         "posthog_person"."properties_last_operation",
         "posthog_person"."team_id",
         "posthog_person"."properties",
         "posthog_person"."is_user_id",
         "posthog_person"."is_identified",
         "posthog_person"."uuid",
         "posthog_person"."version"
  FROM "posthog_person"
  WHERE ("posthog_person"."team_id" = 2
         AND ("posthog_person"."properties" -> 'key') = '"value"'::jsonb
         AND "posthog_person"."properties" ? 'key'
         AND NOT (("posthog_person"."properties" -> 'key') = 'null'::jsonb))
  ORDER BY "posthog_person"."id" ASC
  LIMIT 2
  OFFSET 2
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_iterator.7
  '''
  SELECT "posthog_persondistinctid"."id",
         "posthog_persondistinctid"."team_id",
         "posthog_persondistinctid"."person_id",
         "posthog_persondistinctid"."distinct_id",
         "posthog_persondistinctid"."version"
  FROM "posthog_persondistinctid"
  WHERE ("posthog_persondistinctid"."id" IN
           (SELECT U0."id"
            FROM "posthog_persondistinctid" U0
            WHERE U0."person_id" = ("posthog_persondistinctid"."person_id")
            LIMIT 3)
         AND "posthog_persondistinctid"."person_id" IN (1,
                                                        2,
                                                        3,
                                                        4,
                                                        5 /* ... */))
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_iterator.8
  '''
  SELECT "posthog_person"."id",
         "posthog_person"."created_at",
         "posthog_person"."properties_last_updated_at",
         "posthog_person"."properties_last_operation",
         "posthog_person"."team_id",
         "posthog_person"."properties",
         "posthog_person"."is_user_id",
         "posthog_person"."is_identified",
         "posthog_person"."uuid",
         "posthog_person"."version"
  FROM "posthog_person"
  WHERE ("posthog_person"."team_id" = 2
         AND ("posthog_person"."properties" -> 'key') = '"value"'::jsonb
         AND "posthog_person"."properties" ? 'key'
         AND NOT (("posthog_person"."properties" -> 'key') = 'null'::jsonb))
  ORDER BY "posthog_person"."id" ASC
  LIMIT 2
  OFFSET 4
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_iterator.9
  '''
  SELECT "posthog_person"."uuid"
  FROM "posthog_person"
  WHERE ("posthog_person"."team_id" = 2
         AND "posthog_person"."uuid" IN ('00000000000040008000000000000002'::uuid)
         AND NOT (EXISTS
                    (SELECT 1 AS "a"
                     FROM "posthog_cohortpeople" U1
                     WHERE (U1."cohort_id" = 2
                            AND U1."person_id" = ("posthog_person"."id"))
                     LIMIT 1)))
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_cohort_flag_adds_cohort_props_as_default_too
  '''
  SELECT "posthog_featureflag"."id",
         "posthog_featureflag"."key",
         "posthog_featureflag"."name",
         "posthog_featureflag"."filters",
         "posthog_featureflag"."rollout_percentage",
         "posthog_featureflag"."team_id",
         "posthog_featureflag"."created_by_id",
         "posthog_featureflag"."created_at",
         "posthog_featureflag"."deleted",
         "posthog_featureflag"."active",
         "posthog_featureflag"."rollback_conditions",
         "posthog_featureflag"."performed_rollback",
         "posthog_featureflag"."ensure_experience_continuity",
         "posthog_featureflag"."usage_dashboard_id",
         "posthog_featureflag"."has_enriched_analytics"
  FROM "posthog_featureflag"
  WHERE ("posthog_featureflag"."key" = 'some-feature-new'
         AND "posthog_featureflag"."team_id" = 2)
  LIMIT 21
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_cohort_flag_adds_cohort_props_as_default_too.1
  '''
  SELECT "posthog_cohort"."id",
         "posthog_cohort"."name",
         "posthog_cohort"."description",
         "posthog_cohort"."team_id",
         "posthog_cohort"."deleted",
         "posthog_cohort"."filters",
         "posthog_cohort"."query",
         "posthog_cohort"."version",
         "posthog_cohort"."pending_version",
         "posthog_cohort"."count",
         "posthog_cohort"."created_by_id",
         "posthog_cohort"."created_at",
         "posthog_cohort"."is_calculating",
         "posthog_cohort"."last_calculation",
         "posthog_cohort"."errors_calculating",
         "posthog_cohort"."is_static",
         "posthog_cohort"."groups"
  FROM "posthog_cohort"
  WHERE ("posthog_cohort"."id" = 2
         AND "posthog_cohort"."team_id" = 2)
  LIMIT 21
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_cohort_flag_adds_cohort_props_as_default_too.10
  '''
  SELECT "posthog_person"."uuid"
  FROM "posthog_person"
  WHERE ("posthog_person"."team_id" = 2
         AND "posthog_person"."uuid" IN ('00000000000040008000000000000000'::uuid,
                                         '00000000000040008000000000000001'::uuid,
                                         '00000000000040008000000000000002'::uuid,
                                         '00000000000040008000000000000003'::uuid)
         AND NOT (EXISTS
                    (SELECT 1 AS "a"
                     FROM "posthog_cohortpeople" U1
                     WHERE (U1."cohort_id" = 2
                            AND U1."person_id" = ("posthog_person"."id"))
                     LIMIT 1)))
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_cohort_flag_adds_cohort_props_as_default_too.11
  '''
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."project_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."ingested_event",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_web_vitals_opt_in",
         "posthog_team"."autocapture_web_vitals_allowed_metrics",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."session_replay_config",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."heatmaps_opt_in",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."extra_settings",
         "posthog_team"."modifiers",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_cohort_flag_adds_cohort_props_as_default_too.2
  '''
  SELECT "posthog_cohort"."id",
         "posthog_cohort"."name",
         "posthog_cohort"."description",
         "posthog_cohort"."team_id",
         "posthog_cohort"."deleted",
         "posthog_cohort"."filters",
         "posthog_cohort"."query",
         "posthog_cohort"."version",
         "posthog_cohort"."pending_version",
         "posthog_cohort"."count",
         "posthog_cohort"."created_by_id",
         "posthog_cohort"."created_at",
         "posthog_cohort"."is_calculating",
         "posthog_cohort"."last_calculation",
         "posthog_cohort"."errors_calculating",
         "posthog_cohort"."is_static",
         "posthog_cohort"."groups"
  FROM "posthog_cohort"
  WHERE (NOT "posthog_cohort"."deleted"
         AND "posthog_cohort"."team_id" = 2)
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_cohort_flag_adds_cohort_props_as_default_too.3
  '''
  SELECT "posthog_person"."id",
         "posthog_person"."created_at",
         "posthog_person"."properties_last_updated_at",
         "posthog_person"."properties_last_operation",
         "posthog_person"."team_id",
         "posthog_person"."properties",
         "posthog_person"."is_user_id",
         "posthog_person"."is_identified",
         "posthog_person"."uuid",
         "posthog_person"."version"
  FROM "posthog_person"
  WHERE ("posthog_person"."team_id" = 2
         AND ((("posthog_person"."properties" -> 'group') = '"none"'::jsonb
               AND "posthog_person"."properties" ? 'group'
               AND NOT (("posthog_person"."properties" -> 'group') = 'null'::jsonb))
              OR (("posthog_person"."properties" -> 'group2') IN ('1'::jsonb,
                                                                  '2'::jsonb,
                                                                  '3'::jsonb)
                  AND "posthog_person"."properties" ? 'group2'
                  AND NOT (("posthog_person"."properties" -> 'group2') = 'null'::jsonb))
              OR EXISTS
                (SELECT 1 AS "a"
                 FROM "posthog_cohortpeople" U0
                 WHERE (U0."cohort_id" = 2
                        AND U0."cohort_id" = 2
                        AND U0."person_id" = ("posthog_person"."id"))
                 LIMIT 1)
              OR (("posthog_person"."properties" -> 'does-not-exist') = '"none"'::jsonb
                  AND "posthog_person"."properties" ? 'does-not-exist'
                  AND NOT (("posthog_person"."properties" -> 'does-not-exist') = 'null'::jsonb))
              OR (("posthog_person"."properties" -> 'key') = '"value"'::jsonb
                  AND "posthog_person"."properties" ? 'key'
                  AND NOT (("posthog_person"."properties" -> 'key') = 'null'::jsonb))))
  ORDER BY "posthog_person"."id" ASC
  LIMIT 1000
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_cohort_flag_adds_cohort_props_as_default_too.4
  '''
  SELECT "posthog_persondistinctid"."id",
         "posthog_persondistinctid"."team_id",
         "posthog_persondistinctid"."person_id",
         "posthog_persondistinctid"."distinct_id",
         "posthog_persondistinctid"."version"
  FROM "posthog_persondistinctid"
  WHERE ("posthog_persondistinctid"."id" IN
           (SELECT U0."id"
            FROM "posthog_persondistinctid" U0
            WHERE U0."person_id" = ("posthog_persondistinctid"."person_id")
            LIMIT 3)
         AND "posthog_persondistinctid"."person_id" IN (1,
                                                        2,
                                                        3,
                                                        4,
                                                        5 /* ... */))
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_cohort_flag_adds_cohort_props_as_default_too.5
  '''
  SELECT ("posthog_person"."id" IS NULL
          OR "posthog_person"."id" IS NULL
          OR EXISTS
            (SELECT 1 AS "a"
             FROM "posthog_cohortpeople" U0
             WHERE (U0."cohort_id" = 2
                    AND U0."cohort_id" = 2
                    AND U0."person_id" = ("posthog_person"."id"))
             LIMIT 1)
          OR "posthog_person"."id" IS NULL) AS "flag_X_condition_0"
  FROM "posthog_person"
  INNER JOIN "posthog_persondistinctid" ON ("posthog_person"."id" = "posthog_persondistinctid"."person_id")
  WHERE ("posthog_persondistinctid"."distinct_id" = 'person1'
         AND "posthog_persondistinctid"."team_id" = 2
         AND "posthog_person"."team_id" = 2)
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_cohort_flag_adds_cohort_props_as_default_too.6
  '''
  SELECT ("posthog_person"."id" IS NOT NULL
          OR "posthog_person"."id" IS NULL
          OR EXISTS
            (SELECT 1 AS "a"
             FROM "posthog_cohortpeople" U0
             WHERE (U0."cohort_id" = 2
                    AND U0."cohort_id" = 2
                    AND U0."person_id" = ("posthog_person"."id"))
             LIMIT 1)
          OR "posthog_person"."id" IS NULL) AS "flag_X_condition_0"
  FROM "posthog_person"
  INNER JOIN "posthog_persondistinctid" ON ("posthog_person"."id" = "posthog_persondistinctid"."person_id")
  WHERE ("posthog_persondistinctid"."distinct_id" = 'person2'
         AND "posthog_persondistinctid"."team_id" = 2
         AND "posthog_person"."team_id" = 2)
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_cohort_flag_adds_cohort_props_as_default_too.7
  '''
  SELECT ("posthog_person"."id" IS NULL
          OR "posthog_person"."id" IS NOT NULL
          OR EXISTS
            (SELECT 1 AS "a"
             FROM "posthog_cohortpeople" U0
             WHERE (U0."cohort_id" = 2
                    AND U0."cohort_id" = 2
                    AND U0."person_id" = ("posthog_person"."id"))
             LIMIT 1)
          OR "posthog_person"."id" IS NULL) AS "flag_X_condition_0"
  FROM "posthog_person"
  INNER JOIN "posthog_persondistinctid" ON ("posthog_person"."id" = "posthog_persondistinctid"."person_id")
  WHERE ("posthog_persondistinctid"."distinct_id" = 'person3'
         AND "posthog_persondistinctid"."team_id" = 2
         AND "posthog_person"."team_id" = 2)
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_cohort_flag_adds_cohort_props_as_default_too.8
  '''
  SELECT ("posthog_person"."id" IS NULL
          OR "posthog_person"."id" IS NULL
          OR EXISTS
            (SELECT 1 AS "a"
             FROM "posthog_cohortpeople" U0
             WHERE (U0."cohort_id" = 2
                    AND U0."cohort_id" = 2
                    AND U0."person_id" = ("posthog_person"."id"))
             LIMIT 1)
          OR "posthog_person"."id" IS NULL) AS "flag_X_condition_0"
  FROM "posthog_person"
  INNER JOIN "posthog_persondistinctid" ON ("posthog_person"."id" = "posthog_persondistinctid"."person_id")
  WHERE ("posthog_persondistinctid"."distinct_id" = 'person4'
         AND "posthog_persondistinctid"."team_id" = 2
         AND "posthog_person"."team_id" = 2)
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_cohort_flag_adds_cohort_props_as_default_too.9
  '''
  SELECT "posthog_person"."id",
         "posthog_person"."created_at",
         "posthog_person"."properties_last_updated_at",
         "posthog_person"."properties_last_operation",
         "posthog_person"."team_id",
         "posthog_person"."properties",
         "posthog_person"."is_user_id",
         "posthog_person"."is_identified",
         "posthog_person"."uuid",
         "posthog_person"."version"
  FROM "posthog_person"
  WHERE ("posthog_person"."team_id" = 2
         AND ((("posthog_person"."properties" -> 'group') = '"none"'::jsonb
               AND "posthog_person"."properties" ? 'group'
               AND NOT (("posthog_person"."properties" -> 'group') = 'null'::jsonb))
              OR (("posthog_person"."properties" -> 'group2') IN ('1'::jsonb,
                                                                  '2'::jsonb,
                                                                  '3'::jsonb)
                  AND "posthog_person"."properties" ? 'group2'
                  AND NOT (("posthog_person"."properties" -> 'group2') = 'null'::jsonb))
              OR EXISTS
                (SELECT 1 AS "a"
                 FROM "posthog_cohortpeople" U0
                 WHERE (U0."cohort_id" = 2
                        AND U0."cohort_id" = 2
                        AND U0."person_id" = ("posthog_person"."id"))
                 LIMIT 1)
              OR (("posthog_person"."properties" -> 'does-not-exist') = '"none"'::jsonb
                  AND "posthog_person"."properties" ? 'does-not-exist'
                  AND NOT (("posthog_person"."properties" -> 'does-not-exist') = 'null'::jsonb))
              OR (("posthog_person"."properties" -> 'key') = '"value"'::jsonb
                  AND "posthog_person"."properties" ? 'key'
                  AND NOT (("posthog_person"."properties" -> 'key') = 'null'::jsonb))))
  ORDER BY "posthog_person"."id" ASC
  LIMIT 1000
  OFFSET 1000
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_default_person_properties_adjustment
  '''
  SELECT "posthog_featureflag"."id",
         "posthog_featureflag"."key",
         "posthog_featureflag"."name",
         "posthog_featureflag"."filters",
         "posthog_featureflag"."rollout_percentage",
         "posthog_featureflag"."team_id",
         "posthog_featureflag"."created_by_id",
         "posthog_featureflag"."created_at",
         "posthog_featureflag"."deleted",
         "posthog_featureflag"."active",
         "posthog_featureflag"."rollback_conditions",
         "posthog_featureflag"."performed_rollback",
         "posthog_featureflag"."ensure_experience_continuity",
         "posthog_featureflag"."usage_dashboard_id",
         "posthog_featureflag"."has_enriched_analytics"
  FROM "posthog_featureflag"
  WHERE ("posthog_featureflag"."key" = 'some-feature2'
         AND "posthog_featureflag"."team_id" = 2)
  LIMIT 21
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_default_person_properties_adjustment.1
  '''
  SELECT "posthog_cohort"."id",
         "posthog_cohort"."name",
         "posthog_cohort"."description",
         "posthog_cohort"."team_id",
         "posthog_cohort"."deleted",
         "posthog_cohort"."filters",
         "posthog_cohort"."query",
         "posthog_cohort"."version",
         "posthog_cohort"."pending_version",
         "posthog_cohort"."count",
         "posthog_cohort"."created_by_id",
         "posthog_cohort"."created_at",
         "posthog_cohort"."is_calculating",
         "posthog_cohort"."last_calculation",
         "posthog_cohort"."errors_calculating",
         "posthog_cohort"."is_static",
         "posthog_cohort"."groups"
  FROM "posthog_cohort"
  WHERE ("posthog_cohort"."id" = 2
         AND "posthog_cohort"."team_id" = 2)
  LIMIT 21
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_default_person_properties_adjustment.10
  '''
  SELECT "posthog_persondistinctid"."id",
         "posthog_persondistinctid"."team_id",
         "posthog_persondistinctid"."person_id",
         "posthog_persondistinctid"."distinct_id",
         "posthog_persondistinctid"."version"
  FROM "posthog_persondistinctid"
  WHERE ("posthog_persondistinctid"."id" IN
           (SELECT U0."id"
            FROM "posthog_persondistinctid" U0
            WHERE U0."person_id" = ("posthog_persondistinctid"."person_id")
            LIMIT 3)
         AND "posthog_persondistinctid"."person_id" IN (1,
                                                        2,
                                                        3,
                                                        4,
                                                        5 /* ... */))
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_default_person_properties_adjustment.11
  '''
  SELECT "posthog_person"."id",
         "posthog_person"."created_at",
         "posthog_person"."properties_last_updated_at",
         "posthog_person"."properties_last_operation",
         "posthog_person"."team_id",
         "posthog_person"."properties",
         "posthog_person"."is_user_id",
         "posthog_person"."is_identified",
         "posthog_person"."uuid",
         "posthog_person"."version"
  FROM "posthog_person"
  WHERE ("posthog_person"."team_id" = 2
         AND ("posthog_person"."properties" -> 'key') IS NOT NULL)
  ORDER BY "posthog_person"."id" ASC
  LIMIT 1000
  OFFSET 1000
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_default_person_properties_adjustment.12
  '''
  SELECT "posthog_person"."uuid"
  FROM "posthog_person"
  WHERE ("posthog_person"."team_id" = 2
         AND "posthog_person"."uuid" IN ('00000000000040008000000000000000'::uuid,
                                         '00000000000040008000000000000001'::uuid)
         AND NOT (EXISTS
                    (SELECT 1 AS "a"
                     FROM "posthog_cohortpeople" U1
                     WHERE (U1."cohort_id" = 2
                            AND U1."person_id" = ("posthog_person"."id"))
                     LIMIT 1)))
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_default_person_properties_adjustment.13
  '''
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."project_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."ingested_event",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_web_vitals_opt_in",
         "posthog_team"."autocapture_web_vitals_allowed_metrics",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."session_replay_config",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."heatmaps_opt_in",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."extra_settings",
         "posthog_team"."modifiers",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_default_person_properties_adjustment.2
  '''
  SELECT "posthog_person"."id",
         "posthog_person"."created_at",
         "posthog_person"."properties_last_updated_at",
         "posthog_person"."properties_last_operation",
         "posthog_person"."team_id",
         "posthog_person"."properties",
         "posthog_person"."is_user_id",
         "posthog_person"."is_identified",
         "posthog_person"."uuid",
         "posthog_person"."version"
  FROM "posthog_person"
  WHERE ("posthog_person"."team_id" = 2
         AND UPPER(("posthog_person"."properties" ->> 'key')::text) LIKE UPPER('%value%')
         AND "posthog_person"."properties" ? 'key'
         AND NOT (("posthog_person"."properties" -> 'key') = 'null'::jsonb))
  ORDER BY "posthog_person"."id" ASC
  LIMIT 1000
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_default_person_properties_adjustment.3
  '''
  SELECT "posthog_persondistinctid"."id",
         "posthog_persondistinctid"."team_id",
         "posthog_persondistinctid"."person_id",
         "posthog_persondistinctid"."distinct_id",
         "posthog_persondistinctid"."version"
  FROM "posthog_persondistinctid"
  WHERE ("posthog_persondistinctid"."id" IN
           (SELECT U0."id"
            FROM "posthog_persondistinctid" U0
            WHERE U0."person_id" = ("posthog_persondistinctid"."person_id")
            LIMIT 3)
         AND "posthog_persondistinctid"."person_id" IN (1,
                                                        2,
                                                        3,
                                                        4,
                                                        5 /* ... */))
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_default_person_properties_adjustment.4
  '''
  SELECT "posthog_person"."id",
         "posthog_person"."created_at",
         "posthog_person"."properties_last_updated_at",
         "posthog_person"."properties_last_operation",
         "posthog_person"."team_id",
         "posthog_person"."properties",
         "posthog_person"."is_user_id",
         "posthog_person"."is_identified",
         "posthog_person"."uuid",
         "posthog_person"."version"
  FROM "posthog_person"
  WHERE ("posthog_person"."team_id" = 2
         AND UPPER(("posthog_person"."properties" ->> 'key')::text) LIKE UPPER('%value%')
         AND "posthog_person"."properties" ? 'key'
         AND NOT (("posthog_person"."properties" -> 'key') = 'null'::jsonb))
  ORDER BY "posthog_person"."id" ASC
  LIMIT 1000
  OFFSET 1000
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_default_person_properties_adjustment.5
  '''
  SELECT "posthog_person"."uuid"
  FROM "posthog_person"
  WHERE ("posthog_person"."team_id" = 2
         AND "posthog_person"."uuid" IN ('00000000000040008000000000000000'::uuid)
         AND NOT (EXISTS
                    (SELECT 1 AS "a"
                     FROM "posthog_cohortpeople" U1
                     WHERE (U1."cohort_id" = 2
                            AND U1."person_id" = ("posthog_person"."id"))
                     LIMIT 1)))
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_default_person_properties_adjustment.6
  '''
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."project_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."ingested_event",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_web_vitals_opt_in",
         "posthog_team"."autocapture_web_vitals_allowed_metrics",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."session_replay_config",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."heatmaps_opt_in",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."extra_settings",
         "posthog_team"."modifiers",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_default_person_properties_adjustment.7
  '''
  SELECT "posthog_featureflag"."id",
         "posthog_featureflag"."key",
         "posthog_featureflag"."name",
         "posthog_featureflag"."filters",
         "posthog_featureflag"."rollout_percentage",
         "posthog_featureflag"."team_id",
         "posthog_featureflag"."created_by_id",
         "posthog_featureflag"."created_at",
         "posthog_featureflag"."deleted",
         "posthog_featureflag"."active",
         "posthog_featureflag"."rollback_conditions",
         "posthog_featureflag"."performed_rollback",
         "posthog_featureflag"."ensure_experience_continuity",
         "posthog_featureflag"."usage_dashboard_id",
         "posthog_featureflag"."has_enriched_analytics"
  FROM "posthog_featureflag"
  WHERE ("posthog_featureflag"."key" = 'some-feature-new'
         AND "posthog_featureflag"."team_id" = 2)
  LIMIT 21
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_default_person_properties_adjustment.8
  '''
  SELECT "posthog_cohort"."id",
         "posthog_cohort"."name",
         "posthog_cohort"."description",
         "posthog_cohort"."team_id",
         "posthog_cohort"."deleted",
         "posthog_cohort"."filters",
         "posthog_cohort"."query",
         "posthog_cohort"."version",
         "posthog_cohort"."pending_version",
         "posthog_cohort"."count",
         "posthog_cohort"."created_by_id",
         "posthog_cohort"."created_at",
         "posthog_cohort"."is_calculating",
         "posthog_cohort"."last_calculation",
         "posthog_cohort"."errors_calculating",
         "posthog_cohort"."is_static",
         "posthog_cohort"."groups"
  FROM "posthog_cohort"
  WHERE ("posthog_cohort"."id" = 2
         AND "posthog_cohort"."team_id" = 2)
  LIMIT 21
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_default_person_properties_adjustment.9
  '''
  SELECT "posthog_person"."id",
         "posthog_person"."created_at",
         "posthog_person"."properties_last_updated_at",
         "posthog_person"."properties_last_operation",
         "posthog_person"."team_id",
         "posthog_person"."properties",
         "posthog_person"."is_user_id",
         "posthog_person"."is_identified",
         "posthog_person"."uuid",
         "posthog_person"."version"
  FROM "posthog_person"
  WHERE ("posthog_person"."team_id" = 2
         AND ("posthog_person"."properties" -> 'key') IS NOT NULL)
  ORDER BY "posthog_person"."id" ASC
  LIMIT 1000
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_experience_continuity_flag
  '''
  SELECT "posthog_featureflag"."id",
         "posthog_featureflag"."key",
         "posthog_featureflag"."name",
         "posthog_featureflag"."filters",
         "posthog_featureflag"."rollout_percentage",
         "posthog_featureflag"."team_id",
         "posthog_featureflag"."created_by_id",
         "posthog_featureflag"."created_at",
         "posthog_featureflag"."deleted",
         "posthog_featureflag"."active",
         "posthog_featureflag"."rollback_conditions",
         "posthog_featureflag"."performed_rollback",
         "posthog_featureflag"."ensure_experience_continuity",
         "posthog_featureflag"."usage_dashboard_id",
         "posthog_featureflag"."has_enriched_analytics"
  FROM "posthog_featureflag"
  WHERE ("posthog_featureflag"."key" = 'some-feature2'
         AND "posthog_featureflag"."team_id" = 2)
  LIMIT 21
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_experience_continuity_flag.1
  '''
  SELECT "posthog_cohort"."id",
         "posthog_cohort"."name",
         "posthog_cohort"."description",
         "posthog_cohort"."team_id",
         "posthog_cohort"."deleted",
         "posthog_cohort"."filters",
         "posthog_cohort"."query",
         "posthog_cohort"."version",
         "posthog_cohort"."pending_version",
         "posthog_cohort"."count",
         "posthog_cohort"."created_by_id",
         "posthog_cohort"."created_at",
         "posthog_cohort"."is_calculating",
         "posthog_cohort"."last_calculation",
         "posthog_cohort"."errors_calculating",
         "posthog_cohort"."is_static",
         "posthog_cohort"."groups"
  FROM "posthog_cohort"
  WHERE ("posthog_cohort"."id" = 2
         AND "posthog_cohort"."team_id" = 2)
  LIMIT 21
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_experience_continuity_flag.2
  '''
  SELECT "posthog_person"."id",
         "posthog_person"."created_at",
         "posthog_person"."properties_last_updated_at",
         "posthog_person"."properties_last_operation",
         "posthog_person"."team_id",
         "posthog_person"."properties",
         "posthog_person"."is_user_id",
         "posthog_person"."is_identified",
         "posthog_person"."uuid",
         "posthog_person"."version"
  FROM "posthog_person"
  WHERE ("posthog_person"."team_id" = 2
         AND ("posthog_person"."properties" -> 'key') = '"value"'::jsonb
         AND "posthog_person"."properties" ? 'key'
         AND NOT (("posthog_person"."properties" -> 'key') = 'null'::jsonb))
  ORDER BY "posthog_person"."id" ASC
  LIMIT 1000
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_experience_continuity_flag.3
  '''
  SELECT "posthog_persondistinctid"."id",
         "posthog_persondistinctid"."team_id",
         "posthog_persondistinctid"."person_id",
         "posthog_persondistinctid"."distinct_id",
         "posthog_persondistinctid"."version"
  FROM "posthog_persondistinctid"
  WHERE ("posthog_persondistinctid"."id" IN
           (SELECT U0."id"
            FROM "posthog_persondistinctid" U0
            WHERE U0."person_id" = ("posthog_persondistinctid"."person_id")
            LIMIT 3)
         AND "posthog_persondistinctid"."person_id" IN (1,
                                                        2,
                                                        3,
                                                        4,
                                                        5 /* ... */))
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_experience_continuity_flag.4
  '''
  SELECT "posthog_featureflaghashkeyoverride"."feature_flag_key",
         "posthog_featureflaghashkeyoverride"."hash_key",
         "posthog_featureflaghashkeyoverride"."person_id"
  FROM "posthog_featureflaghashkeyoverride"
  WHERE ("posthog_featureflaghashkeyoverride"."person_id" IN (1,
                                                              2,
                                                              3,
                                                              4,
                                                              5 /* ... */)
         AND "posthog_featureflaghashkeyoverride"."team_id" = 2)
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_experience_continuity_flag.5
  '''
  SELECT "posthog_featureflaghashkeyoverride"."feature_flag_key",
         "posthog_featureflaghashkeyoverride"."hash_key",
         "posthog_featureflaghashkeyoverride"."person_id"
  FROM "posthog_featureflaghashkeyoverride"
  WHERE ("posthog_featureflaghashkeyoverride"."person_id" IN (1,
                                                              2,
                                                              3,
                                                              4,
                                                              5 /* ... */)
         AND "posthog_featureflaghashkeyoverride"."team_id" = 2)
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_experience_continuity_flag.6
  '''
  SELECT "posthog_featureflaghashkeyoverride"."feature_flag_key",
         "posthog_featureflaghashkeyoverride"."hash_key",
         "posthog_featureflaghashkeyoverride"."person_id"
  FROM "posthog_featureflaghashkeyoverride"
  WHERE ("posthog_featureflaghashkeyoverride"."person_id" IN (1,
                                                              2,
                                                              3,
                                                              4,
                                                              5 /* ... */)
         AND "posthog_featureflaghashkeyoverride"."team_id" = 2)
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_experience_continuity_flag.7
  '''
  SELECT "posthog_person"."id",
         "posthog_person"."created_at",
         "posthog_person"."properties_last_updated_at",
         "posthog_person"."properties_last_operation",
         "posthog_person"."team_id",
         "posthog_person"."properties",
         "posthog_person"."is_user_id",
         "posthog_person"."is_identified",
         "posthog_person"."uuid",
         "posthog_person"."version"
  FROM "posthog_person"
  WHERE ("posthog_person"."team_id" = 2
         AND ("posthog_person"."properties" -> 'key') = '"value"'::jsonb
         AND "posthog_person"."properties" ? 'key'
         AND NOT (("posthog_person"."properties" -> 'key') = 'null'::jsonb))
  ORDER BY "posthog_person"."id" ASC
  LIMIT 1000
  OFFSET 1000
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_experience_continuity_flag.8
  '''
  SELECT "posthog_person"."uuid"
  FROM "posthog_person"
  WHERE ("posthog_person"."team_id" = 2
         AND "posthog_person"."uuid" IN ('00000000000040008000000000000002'::uuid)
         AND NOT (EXISTS
                    (SELECT 1 AS "a"
                     FROM "posthog_cohortpeople" U1
                     WHERE (U1."cohort_id" = 2
                            AND U1."person_id" = ("posthog_person"."id"))
                     LIMIT 1)))
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_experience_continuity_flag.9
  '''
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."project_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."ingested_event",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_web_vitals_opt_in",
         "posthog_team"."autocapture_web_vitals_allowed_metrics",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."session_replay_config",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."heatmaps_opt_in",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."extra_settings",
         "posthog_team"."modifiers",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestFeatureFlag.test_cant_create_flag_with_data_that_fails_to_query
  '''
  SELECT (("posthog_person"."properties" ->> 'email')::text ~ '2.3.9{0-9}{1}'
          AND "posthog_person"."properties" ? 'email'
          AND NOT (("posthog_person"."properties" -> 'email') = 'null'::jsonb)) AS "flag_X_condition_0"
  FROM "posthog_person"
  WHERE "posthog_person"."team_id" = 2
  LIMIT 10
  '''
# ---
# name: TestFeatureFlag.test_cant_create_flag_with_group_data_that_fails_to_query
  '''
  SELECT (("posthog_group"."group_properties" ->> 'email')::text ~ '2.3.9{0-9}{1 ef}'
          AND "posthog_group"."group_properties" ? 'email'
          AND NOT (("posthog_group"."group_properties" -> 'email') = 'null'::jsonb)) AS "flag_X_condition_0"
  FROM "posthog_group"
  WHERE ("posthog_group"."group_type_index" = 2
         AND "posthog_group"."team_id" = 2)
  LIMIT 10
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort
  '''
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."is_active",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."pending_email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."is_email_verified",
         "posthog_user"."has_seen_product_intro_for",
         "posthog_user"."strapi_id",
         "posthog_user"."theme_mode",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."hedgehog_config",
         "posthog_user"."events_column_config",
         "posthog_user"."email_opt_in"
  FROM "posthog_user"
  WHERE "posthog_user"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.1
  '''
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."project_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."ingested_event",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_web_vitals_opt_in",
         "posthog_team"."autocapture_web_vitals_allowed_metrics",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."session_replay_config",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."heatmaps_opt_in",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."extra_settings",
         "posthog_team"."modifiers",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.10
  '''
  SELECT "posthog_person"."uuid"
  FROM "posthog_person"
  WHERE ("posthog_person"."team_id" = 2
         AND "posthog_person"."uuid" IN ('00000000000040008000000000000000'::uuid)
         AND NOT (EXISTS
                    (SELECT 1 AS "a"
                     FROM "posthog_cohortpeople" U1
                     WHERE (U1."cohort_id" = 2
                            AND U1."person_id" = ("posthog_person"."id"))
                     LIMIT 1)))
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.11
  '''
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."project_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."ingested_event",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_web_vitals_opt_in",
         "posthog_team"."autocapture_web_vitals_allowed_metrics",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."session_replay_config",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."heatmaps_opt_in",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."extra_settings",
         "posthog_team"."modifiers",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.12
  '''
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."project_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."ingested_event",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_web_vitals_opt_in",
         "posthog_team"."autocapture_web_vitals_allowed_metrics",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."session_replay_config",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."heatmaps_opt_in",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."extra_settings",
         "posthog_team"."modifiers",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.13
  '''
  SELECT "posthog_experiment"."id",
         "posthog_experiment"."name",
         "posthog_experiment"."description",
         "posthog_experiment"."team_id",
         "posthog_experiment"."filters",
         "posthog_experiment"."parameters",
         "posthog_experiment"."secondary_metrics",
         "posthog_experiment"."created_by_id",
         "posthog_experiment"."feature_flag_id",
         "posthog_experiment"."exposure_cohort_id",
         "posthog_experiment"."start_date",
         "posthog_experiment"."end_date",
         "posthog_experiment"."created_at",
         "posthog_experiment"."updated_at",
         "posthog_experiment"."archived",
         "posthog_experiment"."type",
         "posthog_experiment"."variants"
  FROM "posthog_experiment"
  WHERE "posthog_experiment"."exposure_cohort_id" = 2
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.14
  '''
  /* user_id:0 celery:posthog.tasks.calculate_cohort.insert_cohort_from_feature_flag */
  SELECT count(DISTINCT person_id)
  FROM person_static_cohort
  WHERE team_id = 2
    AND cohort_id = 2
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.15
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT id
  FROM person
  INNER JOIN
    (SELECT person_id
     FROM person_static_cohort
     WHERE team_id = 2
       AND cohort_id = 2
     GROUP BY person_id,
              cohort_id,
              team_id) cohort_persons ON cohort_persons.person_id = person.id
  WHERE team_id = 2
  GROUP BY id
  HAVING max(is_deleted) = 0
  ORDER BY argMax(person.created_at, version) DESC, id DESC
  LIMIT 100 SETTINGS optimize_aggregation_in_order = 1
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.2
  '''
  SELECT "posthog_organizationmembership"."id",
         "posthog_organizationmembership"."organization_id",
         "posthog_organizationmembership"."user_id",
         "posthog_organizationmembership"."level",
         "posthog_organizationmembership"."joined_at",
         "posthog_organizationmembership"."updated_at",
         "posthog_organization"."id",
         "posthog_organization"."name",
         "posthog_organization"."slug",
         "posthog_organization"."logo_media_id",
         "posthog_organization"."created_at",
         "posthog_organization"."updated_at",
         "posthog_organization"."plugins_access_level",
         "posthog_organization"."for_internal_metrics",
         "posthog_organization"."is_member_join_email_enabled",
         "posthog_organization"."enforce_2fa",
         "posthog_organization"."is_hipaa",
         "posthog_organization"."customer_id",
         "posthog_organization"."available_product_features",
         "posthog_organization"."usage",
         "posthog_organization"."never_drop_data",
         "posthog_organization"."customer_trust_scores",
         "posthog_organization"."setup_section_2_completed",
         "posthog_organization"."personalization",
         "posthog_organization"."domain_whitelist"
  FROM "posthog_organizationmembership"
  INNER JOIN "posthog_organization" ON ("posthog_organizationmembership"."organization_id" = "posthog_organization"."id")
  WHERE "posthog_organizationmembership"."user_id" = 2
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.3
  '''
  SELECT "posthog_organization"."id",
         "posthog_organization"."name",
         "posthog_organization"."slug",
         "posthog_organization"."logo_media_id",
         "posthog_organization"."created_at",
         "posthog_organization"."updated_at",
         "posthog_organization"."plugins_access_level",
         "posthog_organization"."for_internal_metrics",
         "posthog_organization"."is_member_join_email_enabled",
         "posthog_organization"."enforce_2fa",
         "posthog_organization"."is_hipaa",
         "posthog_organization"."customer_id",
         "posthog_organization"."available_product_features",
         "posthog_organization"."usage",
         "posthog_organization"."never_drop_data",
         "posthog_organization"."customer_trust_scores",
         "posthog_organization"."setup_section_2_completed",
         "posthog_organization"."personalization",
         "posthog_organization"."domain_whitelist"
  FROM "posthog_organization"
  WHERE "posthog_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.4
  '''
  SELECT "posthog_featureflag"."id",
         "posthog_featureflag"."key",
         "posthog_featureflag"."name",
         "posthog_featureflag"."filters",
         "posthog_featureflag"."rollout_percentage",
         "posthog_featureflag"."team_id",
         "posthog_featureflag"."created_by_id",
         "posthog_featureflag"."created_at",
         "posthog_featureflag"."deleted",
         "posthog_featureflag"."active",
         "posthog_featureflag"."rollback_conditions",
         "posthog_featureflag"."performed_rollback",
         "posthog_featureflag"."ensure_experience_continuity",
         "posthog_featureflag"."usage_dashboard_id",
         "posthog_featureflag"."has_enriched_analytics",
         "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."is_active",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."pending_email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."is_email_verified",
         "posthog_user"."requested_password_reset_at",
         "posthog_user"."has_seen_product_intro_for",
         "posthog_user"."strapi_id",
         "posthog_user"."theme_mode",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."hedgehog_config",
         "posthog_user"."events_column_config",
         "posthog_user"."email_opt_in"
  FROM "posthog_featureflag"
  INNER JOIN "posthog_team" ON ("posthog_featureflag"."team_id" = "posthog_team"."id")
  LEFT OUTER JOIN "posthog_user" ON ("posthog_featureflag"."created_by_id" = "posthog_user"."id")
  WHERE ("posthog_team"."project_id" = 2
         AND "posthog_featureflag"."id" = 2)
  LIMIT 21
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.5
  '''
  SELECT "posthog_featureflag"."id",
         "posthog_featureflag"."key",
         "posthog_featureflag"."name",
         "posthog_featureflag"."filters",
         "posthog_featureflag"."rollout_percentage",
         "posthog_featureflag"."team_id",
         "posthog_featureflag"."created_by_id",
         "posthog_featureflag"."created_at",
         "posthog_featureflag"."deleted",
         "posthog_featureflag"."active",
         "posthog_featureflag"."rollback_conditions",
         "posthog_featureflag"."performed_rollback",
         "posthog_featureflag"."ensure_experience_continuity",
         "posthog_featureflag"."usage_dashboard_id",
         "posthog_featureflag"."has_enriched_analytics"
  FROM "posthog_featureflag"
  WHERE ("posthog_featureflag"."key" = 'some-feature'
         AND "posthog_featureflag"."team_id" = 2)
  LIMIT 21
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.6
  '''
  SELECT "posthog_cohort"."id",
         "posthog_cohort"."name",
         "posthog_cohort"."description",
         "posthog_cohort"."team_id",
         "posthog_cohort"."deleted",
         "posthog_cohort"."filters",
         "posthog_cohort"."query",
         "posthog_cohort"."version",
         "posthog_cohort"."pending_version",
         "posthog_cohort"."count",
         "posthog_cohort"."created_by_id",
         "posthog_cohort"."created_at",
         "posthog_cohort"."is_calculating",
         "posthog_cohort"."last_calculation",
         "posthog_cohort"."errors_calculating",
         "posthog_cohort"."is_static",
         "posthog_cohort"."groups"
  FROM "posthog_cohort"
  WHERE ("posthog_cohort"."id" = 2
         AND "posthog_cohort"."team_id" = 2)
  LIMIT 21
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.7
  '''
  SELECT "posthog_person"."id",
         "posthog_person"."created_at",
         "posthog_person"."properties_last_updated_at",
         "posthog_person"."properties_last_operation",
         "posthog_person"."team_id",
         "posthog_person"."properties",
         "posthog_person"."is_user_id",
         "posthog_person"."is_identified",
         "posthog_person"."uuid",
         "posthog_person"."version"
  FROM "posthog_person"
  WHERE ("posthog_person"."team_id" = 2
         AND ("posthog_person"."properties" -> 'key') = '"value"'::jsonb
         AND "posthog_person"."properties" ? 'key'
         AND NOT (("posthog_person"."properties" -> 'key') = 'null'::jsonb))
  ORDER BY "posthog_person"."id" ASC
  LIMIT 10000
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.8
  '''
  SELECT "posthog_persondistinctid"."id",
         "posthog_persondistinctid"."team_id",
         "posthog_persondistinctid"."person_id",
         "posthog_persondistinctid"."distinct_id",
         "posthog_persondistinctid"."version"
  FROM "posthog_persondistinctid"
  WHERE ("posthog_persondistinctid"."id" IN
           (SELECT U0."id"
            FROM "posthog_persondistinctid" U0
            WHERE U0."person_id" = ("posthog_persondistinctid"."person_id")
            LIMIT 3)
         AND "posthog_persondistinctid"."person_id" IN (1,
                                                        2,
                                                        3,
                                                        4,
                                                        5 /* ... */))
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.9
  '''
  SELECT "posthog_person"."id",
         "posthog_person"."created_at",
         "posthog_person"."properties_last_updated_at",
         "posthog_person"."properties_last_operation",
         "posthog_person"."team_id",
         "posthog_person"."properties",
         "posthog_person"."is_user_id",
         "posthog_person"."is_identified",
         "posthog_person"."uuid",
         "posthog_person"."version"
  FROM "posthog_person"
  WHERE ("posthog_person"."team_id" = 2
         AND ("posthog_person"."properties" -> 'key') = '"value"'::jsonb
         AND "posthog_person"."properties" ? 'key'
         AND NOT (("posthog_person"."properties" -> 'key') = 'null'::jsonb))
  ORDER BY "posthog_person"."id" ASC
  LIMIT 10000
  OFFSET 10000
  '''
# ---
# name: TestResiliency.test_feature_flags_v3_with_experience_continuity_working_slow_db
  '''
  WITH target_person_ids AS
    (SELECT team_id,
            person_id
     FROM posthog_persondistinctid
     WHERE team_id = 2
       AND distinct_id = ANY('{example_id,random}') ),
       existing_overrides AS
    (SELECT team_id,
            person_id,
            feature_flag_key,
            hash_key
     FROM posthog_featureflaghashkeyoverride
     WHERE team_id = 2
       AND person_id IN
         (SELECT person_id
          FROM target_person_ids) )
  SELECT key
  FROM posthog_featureflag
  WHERE team_id = 2
    AND ensure_experience_continuity = TRUE
    AND active = TRUE
    AND deleted = FALSE
    AND key NOT IN
      (SELECT feature_flag_key
       FROM existing_overrides)
  '''
# ---
# name: TestResiliency.test_feature_flags_v3_with_experience_continuity_working_slow_db.1
  '''
  WITH target_person_ids AS
    (SELECT team_id,
            person_id
     FROM posthog_persondistinctid
     WHERE team_id = 2
       AND distinct_id = ANY('{example_id,random}') ),
       existing_overrides AS
    (SELECT team_id,
            person_id,
            feature_flag_key,
            hash_key
     FROM posthog_featureflaghashkeyoverride
     WHERE team_id = 2
       AND person_id IN
         (SELECT person_id
          FROM target_person_ids) ),
       flags_to_override AS
    (SELECT key
     FROM posthog_featureflag
     WHERE team_id = 2
       AND ensure_experience_continuity = TRUE
       AND active = TRUE
       AND deleted = FALSE
       AND key NOT IN
         (SELECT feature_flag_key
          FROM existing_overrides) )
  INSERT INTO posthog_featureflaghashkeyoverride (team_id, person_id, feature_flag_key, hash_key)
  SELECT team_id,
         person_id,
         key,
         'random'
  FROM flags_to_override,
       target_person_ids
  WHERE EXISTS
      (SELECT 1
       FROM posthog_person
       WHERE id = person_id
         AND team_id = 2) ON CONFLICT DO NOTHING
  '''
# ---
# name: TestResiliency.test_feature_flags_v3_with_experience_continuity_working_slow_db.2
  '''
  SELECT "posthog_persondistinctid"."person_id",
         "posthog_persondistinctid"."distinct_id"
  FROM "posthog_persondistinctid"
  WHERE ("posthog_persondistinctid"."distinct_id" IN ('example_id',
                                                      'random')
         AND "posthog_persondistinctid"."team_id" = 2)
  '''
# ---
# name: TestResiliency.test_feature_flags_v3_with_experience_continuity_working_slow_db.3
  '''
  SELECT "posthog_featureflaghashkeyoverride"."feature_flag_key",
         "posthog_featureflaghashkeyoverride"."hash_key",
         "posthog_featureflaghashkeyoverride"."person_id"
  FROM "posthog_featureflaghashkeyoverride"
  WHERE ("posthog_featureflaghashkeyoverride"."person_id" IN (1,
                                                              2,
                                                              3,
                                                              4,
                                                              5 /* ... */)
         AND "posthog_featureflaghashkeyoverride"."team_id" = 2)
  '''
# ---
# name: TestResiliency.test_feature_flags_v3_with_experience_continuity_working_slow_db.4
  '''
  SELECT (("posthog_person"."properties" -> 'email') = '"tim@posthog.com"'::jsonb
          AND "posthog_person"."properties" ? 'email'
          AND NOT (("posthog_person"."properties" -> 'email') = 'null'::jsonb)) AS "flag_X_condition_0",
         (true) AS "flag_X_condition_0"
  FROM "posthog_person"
  INNER JOIN "posthog_persondistinctid" ON ("posthog_person"."id" = "posthog_persondistinctid"."person_id")
  WHERE ("posthog_persondistinctid"."distinct_id" = 'example_id'
         AND "posthog_persondistinctid"."team_id" = 2
         AND "posthog_person"."team_id" = 2)
  '''
# ---
# name: TestResiliency.test_feature_flags_v3_with_experience_continuity_working_slow_db.5
  '''
  WITH target_person_ids AS
    (SELECT team_id,
            person_id
     FROM posthog_persondistinctid
     WHERE team_id = 2
       AND distinct_id = ANY('{example_id,random}') ),
       existing_overrides AS
    (SELECT team_id,
            person_id,
            feature_flag_key,
            hash_key
     FROM posthog_featureflaghashkeyoverride
     WHERE team_id = 2
       AND person_id IN
         (SELECT person_id
          FROM target_person_ids) )
  SELECT key
  FROM posthog_featureflag
  WHERE team_id = 2
    AND ensure_experience_continuity = TRUE
    AND active = TRUE
    AND deleted = FALSE
    AND key NOT IN
      (SELECT feature_flag_key
       FROM existing_overrides)
  '''
# ---
# name: TestResiliency.test_feature_flags_v3_with_experience_continuity_working_slow_db.6
  '''
  SELECT "posthog_persondistinctid"."person_id",
         "posthog_persondistinctid"."distinct_id"
  FROM "posthog_persondistinctid"
  WHERE ("posthog_persondistinctid"."distinct_id" IN ('example_id',
                                                      'random')
         AND "posthog_persondistinctid"."team_id" = 2)
  '''
# ---
# name: TestResiliency.test_feature_flags_v3_with_experience_continuity_working_slow_db.7
  '''
  SELECT "posthog_persondistinctid"."person_id",
         "posthog_persondistinctid"."distinct_id"
  FROM "posthog_persondistinctid"
  WHERE ("posthog_persondistinctid"."distinct_id" IN ('random')
         AND "posthog_persondistinctid"."team_id" = 2)
  '''
# ---
# name: TestResiliency.test_feature_flags_v3_with_group_properties_and_slow_db
  '''
  SELECT "posthog_grouptypemapping"."id",
         "posthog_grouptypemapping"."team_id",
         "posthog_grouptypemapping"."group_type",
         "posthog_grouptypemapping"."group_type_index",
         "posthog_grouptypemapping"."name_singular",
         "posthog_grouptypemapping"."name_plural"
  FROM "posthog_grouptypemapping"
  WHERE "posthog_grouptypemapping"."team_id" = 2
  '''
# ---
# name: TestResiliency.test_feature_flags_v3_with_group_properties_and_slow_db.1
  '''
  SELECT "posthog_grouptypemapping"."id",
         "posthog_grouptypemapping"."team_id",
         "posthog_grouptypemapping"."group_type",
         "posthog_grouptypemapping"."group_type_index",
         "posthog_grouptypemapping"."name_singular",
         "posthog_grouptypemapping"."name_plural"
  FROM "posthog_grouptypemapping"
  WHERE "posthog_grouptypemapping"."team_id" = 2
  '''
# ---
# name: TestResiliency.test_feature_flags_v3_with_group_properties_and_slow_db.2
  '''
  SELECT "posthog_grouptypemapping"."id",
         "posthog_grouptypemapping"."team_id",
         "posthog_grouptypemapping"."group_type",
         "posthog_grouptypemapping"."group_type_index",
         "posthog_grouptypemapping"."name_singular",
         "posthog_grouptypemapping"."name_plural"
  FROM "posthog_grouptypemapping"
  WHERE "posthog_grouptypemapping"."team_id" = 2
  '''
# ---
# name: TestResiliency.test_feature_flags_v3_with_slow_db_doesnt_try_to_compute_conditions_again
  '''
  SELECT (("posthog_person"."properties" -> 'email') = '"tim@posthog.com"'::jsonb
          AND "posthog_person"."properties" ? 'email'
          AND NOT (("posthog_person"."properties" -> 'email') = 'null'::jsonb)) AS "flag_X_condition_0",
         (("posthog_person"."properties" -> 'email') = '"tim@posthog.com"'::jsonb
          AND "posthog_person"."properties" ? 'email'
          AND NOT (("posthog_person"."properties" -> 'email') = 'null'::jsonb)) AS "flag_X_condition_0",
         (true) AS "flag_X_condition_0"
  FROM "posthog_person"
  INNER JOIN "posthog_persondistinctid" ON ("posthog_person"."id" = "posthog_persondistinctid"."person_id")
  WHERE ("posthog_persondistinctid"."distinct_id" = 'example_id'
         AND "posthog_persondistinctid"."team_id" = 2
         AND "posthog_person"."team_id" = 2)
  '''
# ---
